minor fix needed for scrollbars

--- a/css/style.css
+++ b/css/style.css
@@ -42,9 +42,14 @@ main .container{
     height: 100vh;
     width: 100vw;
     color: #FFFF00;
-    background-color: rgba(255, 0,0 , 0.8);
+    /* background-color: rgba(255, 0,0 , 0.8); */
     position: relative;
     border: 1px solid black;
+    font-size: 2rem;
+    font-weight: 900;
+    line-height: 3rem;
+    text-transform: uppercase;
+    text-align: center;
 }
 .container .product{
     width: 500px;
@@ -57,11 +62,23 @@ main .container{
     width: inherit;
     object-fit: contain;
 }
-.container .product h2
+#first{
+    background-color: rgba(255, 0,0 , 0.8);
+}
+#second
+{
+    background-color: rgba(0, 128, 0 , 0.8);
+}
+#third
+{
+    background-color: rgba(255, 255,0 , 0.8);
+    color: rgb(0, 128, 0 );
+}
+/* .container .product h2
 {
     font-size: 3rem;
     font-weight: 900;
     line-height: 3rem;
     text-transform: uppercase;
     text-align: center;
-}
+} */
